--- a/contact-us.html
+++ b/contact-us.html
@@ -120,7 +120,7 @@
 
     <div class="nav-center">
       <nav>
-      <a href="home.html" target="_blank">Home</a>
+      <a href="index.html" target="_blank">Home</a>
       <a href="about-us.html" target="_blank">About Us</a>
       <a href="contact-us.html" target="_blank">Contact Us</a>
       </nav>
